--- a/index.html
+++ b/index.html
@@ -138,14 +138,7 @@
                       <v-list-tile-action><v-icon class="primary--text">phone</v-icon></v-list-tile-action>
                       <v-list-tile-content>
                         <v-list-tile-title> (205) 937-5804 </v-list-tile-title>
-                        <v-list-tile-sub-title> Mobile </v-list-tile-sub-title>
-                      </v-list-tile-content>
-                    </v-list-tile>
-                    <v-list-tile>
-                      <v-list-tile-action></v-list-tile-action>
-                      <v-list-tile-content>
-                        <v-list-tile-title> (205) 823-7476 </v-list-tile-title>
-                        <v-list-tile-sub-title> Home </v-list-tile-sub-title>
+                        <v-list-tile-sub-title> Cell </v-list-tile-sub-title>
                       </v-list-tile-content>
                     </v-list-tile>
                   <v-divider inset></v-divider>
