--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                   <h4 class="mt-4 white--text"> Things I know a bit about: </h4>
                   <ul>
                     <li> SPAs, PWAs, & MVC </li>
-                    <!-- <li> Server-Side Rendering </li> -->
+                    <li> Server-Side Rendering </li>
                     <li> Cloud Architecture, IaaS, & PaaS </li>
                     <li> API design, consumption, & integration </li>
-                    <!-- <li> Unit testing & Continuous Integration </li> -->
+                    <li> Unit testing & Continuous Integration </li>
                     <li> Database design, maintenance, & integration;<br> SQL and NoSQL </li>
-                    <li> And before you ask, yes: &nbsp; <em> jQuery </em> &nbsp; <span class="grey--text text--darken-2">;)</span> </li>
+                    <!-- <li> And before you ask, yes: &#38;nbsp; <em> jQuery </em> &#38;nbsp; <span class="grey&#45;&#45;text text&#45;&#45;darken&#45;2">;)</span> </li> -->
                   </ul>
 
                   <h4 class="mt-3 white--text"> Fun Facts: </h4>
