--- a/index.html
+++ b/index.html
@@ -118,42 +118,42 @@
               </v-flex>
             </v-layout>
 <!-- ======================================================================= -->
-            <v-layout row align-center justify-center>
-              <v-flex xs12 sm12 md8 class="mt-5">
-                <v-card>
-                  <v-toolbar class="primary">
-                    <v-toolbar-title class="secondary--text"> Leave a Message </v-toolbar-title>
-                  </v-toolbar>
-                  <v-card-text>
-                    <v-text-field
-                      class="mt-3"
-                      label="Your Name"
-                      v-model="contactName">
-                    </v-text-field>
-                    <v-text-field
-                      label="Your Email"
-                      type="email"
-                      v-model="contactEmail">
-                      <!-- :rules="[rules.email]"> -->
-                    </v-text-field>
-                    <v-text-field
-                      label="Subject"
-                      hint="You can leave this field blank if you'd like"
-                      v-model="contactSubject">
-                    </v-text-field>
-                    <v-text-field
-                      label="Message"
-                      v-model="contactMessage"
-                      multi-line>
-                    </v-text-field>
-                    <!-- <small>*indicates required field</small> -->
-                    <v-layout column nowrap align-center class="pb-2">
-                      <v-btn disabled class="text-xs-center"> Send </v-btn>
-                    </v-layout>
-                  </v-card-text>
-                </v-card>
-              </v-flex>
-            </v-layout>
+            <!-- <v&#45;layout row align&#45;center justify&#45;center> <!&#45;&#45; TODO: This can be a loop &#45;&#45;> -->
+            <!--   <v&#45;flex xs12 sm12 md8 class="mt&#45;5"> -->
+            <!--     <v&#45;card> -->
+            <!--       <v&#45;toolbar class="primary"> -->
+            <!--         <v&#45;toolbar&#45;title class="secondary&#45;&#45;text"> Leave a Message </v&#45;toolbar&#45;title> -->
+            <!--       </v&#45;toolbar> -->
+            <!--       <v&#45;card&#45;text> -->
+            <!--         <v&#45;text&#45;field -->
+            <!--           class="mt&#45;3" -->
+            <!--           label="Your Name" -->
+            <!--           v&#45;model="contactName"> -->
+            <!--         </v&#45;text&#45;field> -->
+            <!--         <v&#45;text&#45;field -->
+            <!--           label="Your Email" -->
+            <!--           type="email" -->
+            <!--           v&#45;model="contactEmail"> -->
+            <!--           <!&#45;&#45; :rules="[rules.email]"> &#45;&#45;> -->
+            <!--         </v&#45;text&#45;field> -->
+            <!--         <v&#45;text&#45;field -->
+            <!--           label="Subject" -->
+            <!--           hint="You can leave this field blank if you'd like" -->
+            <!--           v&#45;model="contactSubject"> -->
+            <!--         </v&#45;text&#45;field> -->
+            <!--         <v&#45;text&#45;field -->
+            <!--           label="Message" -->
+            <!--           v&#45;model="contactMessage" -->
+            <!--           multi&#45;line> -->
+            <!--         </v&#45;text&#45;field> -->
+            <!--         <!&#45;&#45; <small>*indicates required field</small> &#45;&#45;> -->
+            <!--         <v&#45;layout column nowrap align&#45;center class="pb&#45;2"> -->
+            <!--           <v&#45;btn disabled class="text&#45;xs&#45;center"> Send </v&#45;btn> -->
+            <!--         </v&#45;layout> -->
+            <!--       </v&#45;card&#45;text> -->
+            <!--     </v&#45;card> -->
+            <!--   </v&#45;flex> -->
+            <!-- </v&#45;layout> -->
 <!-- ======================================================================= -->
           <v-layout row align-center justify-center>
               <v-flex xs12 sm12 md8 class="mt-5">
