--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <v-flex xs12 sm12 md8 class="mt-5">
                 <v-card class="elevation-1">
                   <v-toolbar class="primary elevation-1">
-                    <v-toolbar-title class="secondary--text"> What I've Been Up To </v-toolbar-title>
+                    <v-toolbar-title class="secondary--text"> This Week's Stats: </v-toolbar-title>
                   </v-toolbar>
                   <v-container>
                       <v-container>
