--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                   </v-toolbar>
                   <v-container fluid>
                     <figure><embed src="https://wakatime.com/share/@dunstontc/b1d612f5-12f9-4eee-ad2e-e816e32061f4.svg"></embed></figure>
-                    <br/>
-                    <figure><embed src="https://wakatime.com/share/@dunstontc/7f49ca15-91d7-47b4-8219-9d8b4c989a94.svg"></embed></figure>
+                    <!-- <br/> -->
+                    <!-- <figure><embed src="https://wakatime.com/share/@dunstontc/7f49ca15&#45;91d7&#45;47b4&#45;8219&#45;9d8b4c989a94.svg"></embed></figure> -->
                   </v-container>
                 </v-card>
               </v-flex>
