comment out wakatime

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </v-flex>
           </v-layout>
 <!-- ======================================================================= -->
-          <v-layout row align-center justify-center>
+          <!-- <v-layout row align-center justify-center>
               <v-flex xs12 sm12 md8 class="mt-5">
                 <v-card class="elevation-1">
                   <v-toolbar class="primary elevation-1">
@@ -88,12 +88,10 @@
                   </v-toolbar>
                   <v-container fluid>
                     <figure><embed src="https://wakatime.com/share/@dunstontc/b1d612f5-12f9-4eee-ad2e-e816e32061f4.svg"></embed></figure>
-                    <!-- <br/> -->
-                    <!-- <figure><embed src="https://wakatime.com/share/@dunstontc/7f49ca15&#45;91d7&#45;47b4&#45;8219&#45;9d8b4c989a94.svg"></embed></figure> -->
                   </v-container>
                 </v-card>
               </v-flex>
-            </v-layout>
+            </v-layout> -->
 <!-- ======================================================================= -->
           <v-layout row align-center justify-center>
               <v-flex xs12 sm12 md10 lg10 class="mt-5">
