update facebook link

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ new Vue({
     accounts: [
       { icon: 'mdi-github-circle',   title: 'GitHub',   link: "https://github.com/dunstontc" },
       { icon: 'mdi-codepen',         title: 'Codepen',  link: "https://codepen.io/dunstontc" },
-      { icon: 'mdi-facebook-box',    title: 'Facebook', link: "https://www.facebook.com/clay.dunston" },
+      { icon: 'mdi-facebook-box',    title: 'Facebook', link: "https://www.facebook.com/dunstontc" },
       { icon: 'mdi-linkedin-box',    title: 'LinkedIn', link: "https://www.linkedin.com/in/clay-dunston/" },
     ],
     itemz   : [
