--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                       <span class="group">
                           <v-btn
                               v-for="i in accounts" :key="i"
-                              icon tag="a" :href="i.url"
+                              icon tag="a" :href="i.link"
                               class="ml-3 mr-3">
                               <v-icon medium class="primary--text">
                                 {{i.icon}}
