Remove the fun button

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <v-toolbar-title v-text="title"></v-toolbar-title>
         <v-spacer></v-spacer>
         <v-toolbar-items class="hidden-sm-and-down">
-          <v-btn flat class="primary--text"> ᕕ( ᐛ )ᕗ </v-btn>
+<!--           <v-btn flat class="primary--text"> ᕕ( ᐛ )ᕗ </v-btn> -->
           <v-btn flat class="primary--text" @click="snackbar = true"> Home </v-btn>
         </v-toolbar-items>
       </v-toolbar>
